	    + Computer must be used in call to pql_add_sudo_role().
	    + Use 'dn' not 'user' in the select option.
	    + Include left-head.html.
	    + Fix some translations in include/pql_hostctrl.inc:pql_list_expand().
	    + The missing functions include/pql_write.inc:pql_add_computer() and 
	      include/pql_write.inc:pql_add_sudo_role() sent to me months ago, is now
	      added.

	GUI layout changes
	  - Add a 'Global' branch tree in the left-controls.php page - Get (and later
	    modify) ALL QLC object attributes in one 'simple' swoop.
	  - Support LDAP URI's ('ldap://', 'ldaps://' and 'ldapi://') and not just
	    hostnames in 'ldapserver'
	  - Setup a attribute aliases file to translate the more/most obscure attributes
	    to more 'humanly readable' word.
	    Closes: #126
	  - The 'Host control' and 'Sudoers access' buttons in the domain details page
	    should only be visable if running in advanced mode.
	  - Only show the '[domain]->Host control->Host Control Access' stuff if there
	    actually IS any computers in the database. This to avoid information that is
	    of no use (can't add a user to a non-existent computer!).
	    + If no computers, output a little notify about this, and what to do next.
	  - Add support for Opera in host_modify.php. Faulty DOM implementation and I
	    use Opera...
	  - Cleanup/fix the showing of the hosts IP address. Got a little 'of-beat'.
	  - Some slight changes to debug message(s) when removing/renaming an object.

	Schema changes
	API changes
	  - Remove the redundant pql_get_uid() function. It didn't work in the first
	    place, and I find it cleaner to use the pql_get_attribute().

	Misc changes
	  - Add useSimScan to the list of attributes that 'users' need read access to.
	  - When debugging the pql_config.inc:pql_set_define() function, only output
	    debugging if: File .DEBUG_DEFINES exists _AND_ it's a '_CONF_' define
	    (i.e. ignore any _ATTR_ definition).